Fixed layout issue on Stories/Films page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -20737,6 +20737,13 @@ body.modal-open {
     }
   }
 }
+.loading-more-posts .stories-feeds-section {
+  .stories-entries .storyBlock.loaded-item {
+    @include tab {
+      width: 33.333%!important;
+    }
+  }
+}
 
 #saveBoxesWidth {
   position: fixed;
